# megano_shop

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  prometheus.yaml  pyproject.toml  pytest.ini
backend/megano/accounts/: admin.py  conftest.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/megano/accounts/migrations/: 0001_initial.py  0002_alter_imagemodel_options_alter_profilemodel_options_and_more.py  0003_alter_profilemodel_email.py
backend/megano/basket/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/megano/basket/migrations/: 0001_initial.py  0002_alter_basketmodel_options_alter_basketmodel_table.py  0003_alter_basketmodel_user.py  0004_alter_basketmodel_user.py
backend/megano/catalog/: serializers.py  urls.py  views.py
backend/megano/megano/: custom_handler.py  settings.py  urls.py
backend/megano/orders/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
backend/megano/orders/migrations/: 0001_initial.py  0002_alter_ordermodel_options_alter_ordermodel_table.py  0003_remove_ordermodel_user.py
backend/megano/products/: admin.py  conftest.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/megano/products/migrations/: 0001_initial.py  0002_alter_productmodel_options_alter_productmodel_price_and_more.py  0003_alter_productmodel_price.py  0004_alter_categoriesmodel_options_and_more.py  0005_remove_productmodel_category_and_more.py
frontend/: README.md
